tests/fixtures/invalid/float_mod_bytes.py
# Cannot modulo Float and Bytes
x: float = 1.0 % b"hello"
